# qdrant-nemoclaw

./: .env.example  Dockerfile  render-entrypoint.sh  render.yaml
family-hub/: index.html  package.json  server.js
qdrant-edge-bridge/: pyproject.toml  server.py
qdrant-memory/: openclaw.plugin.json  package.json  pnpm-lock.yaml  tsconfig.json
qdrant-memory/src/: embeddings.ts  index.ts  qdrant.ts
